Frontend Basic Forms

--- a/TUI.Application/Views/Shared/_Layout.cshtml
+++ b/TUI.Application/Views/Shared/_Layout.cshtml
@@ -26,13 +26,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">TUI.Application</a>
+                <a asp-area="" asp-controller="Flights" asp-action="GetPage" class="navbar-brand">TUI.Application</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Flights" asp-action="GetPage">Flights</a></li>
+                    <li><a asp-area="" asp-controller="Airports" asp-action="GetPage">Airports</a></li>
+                    <li><a asp-area="" asp-controller="Aircrafts" asp-action="GetPage">Aircrafts</a></li>
                 </ul>
             </div>
         </div>
