--- a/TUI.Application/Views/_ViewImports.cshtml
+++ b/TUI.Application/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using TUI.Application
-@using TUI.Application.Models
+@using TUI.Data.Common.DTOs
+@using TUI.Data.Common.Options
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
