--- a/TUI.Application/Views/Flights/Partials/FlightCreate.cshtml
+++ b/TUI.Application/Views/Flights/Partials/FlightCreate.cshtml
@@ -1,7 +1,18 @@
-﻿@model TUI.Data.Flights.Options.FlightPostOptions
-
+﻿@using TUI.Application.Views.Common.Models
+@model TUI.Data.Flights.Options.FlightPostOptions
 @{
-    var airports = ;
+    var now = DateTime.Now;
+    now = new DateTime(now.Year, now.Month, now.Day + 7, now.Hour, now.Minute, 0);
+    var nowString = now.ToString("yyyy-MM-ddTHH:mm");
+
+    if (Model.DepartureTime < now)
+    {
+        Model.DepartureTime = now;
+    }
+    if (Model.ArrivalTime <= Model.DepartureTime)
+    {
+        Model.ArrivalTime = Model.DepartureTime.AddDays(1);
+    }
 }
 
 <hr />
@@ -13,18 +24,38 @@
               asp-action="PostAsync">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="DepartureAirportId" class="control-label"></label>
-                <select asp-for="DepartureAirportId" class="form-control" asp-items="@airports"></select>
+                <label asp-for="DepartureAirportId" class="control-label">DepartureAirport</label>
+                @{
+                    await Html.RenderPartialAsync("~/Views/Common/Partials/SelectPaginated.cshtml",
+                        new SelectModel
+                        {
+                            Key = "Select",
+                            Value = "DepartureAirportId",
+                            KeyJSONKey = "name",
+                            ValueJSONKey = "public_id",
+                            Url = "airports/json",
+                        }, ViewData);
+                }
                 <span asp-validation-for="DepartureAirportId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DepartureTime" class="control-label"></label>
-                <input asp-for="DepartureTime" class="form-control" type="datetime-local" />
+                <input asp-for="DepartureTime" class="form-control" type="datetime-local" min="@nowString" />
                 <span asp-validation-for="DepartureTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ArrivalAirportId" class="control-label"></label>
-                <input asp-for="ArrivalAirportId" class="form-control" />
+                <label asp-for="ArrivalAirportId" class="control-label">ArrivalAirport</label>
+                @{
+                    await Html.RenderPartialAsync("~/Views/Common/Partials/SelectPaginated.cshtml",
+                        new SelectModel
+                        {
+                            Key = "Select",
+                            Value = "ArrivalAirportId",
+                            KeyJSONKey = "name",
+                            ValueJSONKey = "public_id",
+                            Url = "airports/json",
+                        }, ViewData);
+                }
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -33,8 +64,18 @@
                 <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AircraftId" class="control-label"></label>
-                <input asp-for="AircraftId" class="form-control" />
+                <label asp-for="AircraftId" class="control-label">Aircraft</label>
+                @{
+                    await Html.RenderPartialAsync("~/Views/Common/Partials/SelectPaginated.cshtml",
+                        new SelectModel
+                        {
+                            Key = "Select",
+                            Value = "AircraftId",
+                            KeyJSONKey = "number",
+                            ValueJSONKey = "public_id",
+                            Url = "aircrafts/json",
+                        }, ViewData);
+                }
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -47,3 +88,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
