--- a/TUI.Application/wwwroot/css/site.css
+++ b/TUI.Application/wwwroot/css/site.css
@@ -10,26 +10,19 @@
     padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-    font-size: 20px;
-    line-height: 1.4;
+.select-option {
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0);
 }
 
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-    width: 100%;
-}
-
-/* QR code generator */
-#qrCode {
-    margin: 15px;
-}
-
-/* Hide/rearrange for smaller screens */
-@media screen and (max-width: 767px) {
-    /* Hide captions */
-    .carousel-caption {
-        display: none;
+    .select-option:hover {
+        background: rgba(0, 0, 0, 0.1);
     }
+
+.select-list-container {
+    height: auto;
+}
+
+.select-list {
+    height: auto;
 }
