Code cleaning & Data xUnit Tests

--- a/TUI.Application/Views/Aircrafts/AircraftsPage.cshtml
+++ b/TUI.Application/Views/Aircrafts/AircraftsPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TUI.Data.Aircrafts.Options
-@model TUI.Data.Aircrafts.DTOs.AircraftDTO.PaginatedDTO
+@model TUI.Data.Aircrafts.DTOs.AircraftDTO.PageDTO
 @{
     ViewData["Title"] = "Aircrafts";
 
