--- a/TUI.Application/Views/Airports/AirportsPage.cshtml
+++ b/TUI.Application/Views/Airports/AirportsPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TUI.Data.Airports.Options
-@model TUI.Data.Airports.DTOs.AirportDTO.PaginatedDTO
+@model TUI.Data.Airports.DTOs.AirportDTO.PageDTO
 @{
     ViewData["Title"] = "Airports";
 
