--- a/TUI.Application/Views/Common/Partials/Pagination.cshtml
+++ b/TUI.Application/Views/Common/Partials/Pagination.cshtml
@@ -1,4 +1,4 @@
-﻿@model TUI.Data.Common.DTOs.PaginatedDTO
+﻿@model TUI.Data.Common.DTOs.PageDTO
 
 @{
     var previousDisabled = Model.PageNumber <= 1 ? "disabled" : "";
