--- a/TUI.Application/Views/Flights/FlightsPage.cshtml
+++ b/TUI.Application/Views/Flights/FlightsPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TUI.Data.Flights.Options
-@model TUI.Data.Flights.DTOs.FlightDTO.PaginatedDTO
+@model TUI.Data.Flights.DTOs.FlightDTO.PageDTO
 @{
     ViewData["Title"] = "Flights";
 
